--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,8 +1,4 @@
-# Sample workflow for building and deploying a Next.js site to GitHub Pages
-#
-# To get started with Next.js see: https://nextjs.org/docs/getting-started
-#
-name: Deploy Next.js site to Pages
+name: Deploy Next.js site
 
 on:
   # Runs on pushes targeting the default branch
@@ -47,7 +43,6 @@ jobs:
           else
             echo "Unable to determine package manager"
             exit 1
-          fi
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -80,8 +75,8 @@ jobs:
         with:
           path: ./out
 
-  # Deployment job
-  deploy:
+  # Deployment job to GitHub Pages
+  deploy-github-pages:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
@@ -91,3 +86,21 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+  # Deployment job to Hostinger via FTP
+  deploy-hostinger:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install lftp
+        run: sudo apt-get install lftp
+      - name: Deploy to Hostinger
+        run: |
+          lftp -f "
+          open ${{ secrets.HOSTINGER_FTP_SERVER }}
+          user ${{ secrets.HOSTINGER_FTP_USERNAME }} ${{ secrets.HOSTINGER_FTP_PASSWORD }}
+          mirror -R ./out /path/to/your/hostinger/directory
+          bye
+          "
