--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -85,6 +85,6 @@ jobs:
           lftp -f "
           open ${{ secrets.HOSTINGER_FTP_SERVER }}
           user ${{ secrets.HOSTINGER_FTP_USERNAME }} ${{ secrets.HOSTINGER_FTP_PASSWORD }}
-          mirror -R ./out /path/to/your/hostinger/directory
+          # mirror -R ./out /path/to/your/hostinger/directory
           bye
           "
