--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,14 +3,14 @@ name: Generate a build and push to another branch
 on:
   push:
     branches:
-      - main # The branch name your are commit the new changes
+      - main # The branch name you are committing the new changes
 
 jobs:
   build:
     runs-on: ubuntu-latest
     name: Build and Push
     steps:
-      - name: git-checkout
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Install all dependencies
@@ -19,11 +19,11 @@ jobs:
       - name: Build
         run: npm run build # The build command of your project
 
-      - name: Push
+      - name: Push build artifacts to branch
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
           BRANCH: main # The branch name where you want to push the assets
-          FOLDER: main # The directory where your assets are generated
+          FOLDER: build # The directory where your assets are generated
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "Build: ({sha}) {msg}" # The commit message  
+          MESSAGE: "Build: ({sha}) {msg}" # The commit message
