--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
+    "konva": "^9.3.14",
     "next": "14.2.5",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-konva": "^18.2.10",
     "react-toastify": "^10.0.5",
+    "use-image": "^1.1.1",
     "yum": "^0.1.1"
   },
   "devDependencies": {
