--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "canvas": "^2.11.2",
     "formik": "^2.4.6",
     "gsap": "^3.12.5",
     "konva": "^9.3.14",
